RESOLVED FIXED 247759
[AVIF Downlevels] AVIF image can't be opened as an ImageDocument
https://bugs.webkit.org/show_bug.cgi?id=247759
Summary [AVIF Downlevels] AVIF image can't be opened as an ImageDocument
Said Abou-Hallawa
Reported 2022-11-10 13:57:12 PST
1. Drag a local AVIF image to the image address in mini-browser or Safari. 2. Or click on a link to an AVIF image. Result: Either Safari will ask to download the file or display it as a broken image. Expected: The AVIF image is displayed as an ImageDocument.
Attachments
Radar WebKit Bug Importer
Comment 1 2022-11-10 14:04:29 PST
Said Abou-Hallawa
Comment 2 2022-11-10 14:12:46 PST
EWS
Comment 3 2022-11-17 10:27:19 PST
Committed 256796@main (45f050d36721): <https://commits.webkit.org/256796@main> Reviewed commits have been landed. Closing PR #6363 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.