[AVIF Downlevels] AVIF image can't be opened as an ImageDocument https://bugs.webkit.org/show_bug.cgi?id=247759 rdar://102210682

Reviewed by Myles C. Maxfield.

On down levels macOS, we need to explicitly set the mime type for the requested
URL given its extension. We should not rely on NSURLResponse to tell us the correct
mime type since AVIF is only supported on macOS Ventura.

* LayoutTests/fast/images/avif-image-document-expected.html: Added.
* LayoutTests/fast/images/avif-image-document.html: Added.
* LayoutTests/platform/mac-wk1/TestExpectations:
* LayoutTests/platform/win/TestExpectations:
* Source/WebCore/platform/network/cocoa/ResourceResponseCocoa.mm:
(WebCore::ResourceResponse::platformLazyInit):

Canonical link: https://commits.webkit.org/256796@main